=== Version X.X.X (XX-XXX-2014) ===

* Library changes
  * Added Chart.titlePadding, to configure the distance between the chart title and plot area.
  * Renaming
    * insight.Axis.axisLabelColor => insight.Axis.axisTitleColor
    * insight.Axis.axisLabelFont => insight.Axis.axisTitleFont
    * insight.Theme.axisStyle.showGridlines => insight.Theme.axisStyle.shouldShowGridlines
    * insight.Theme.axisStyle.axisLabelFont => insight.Theme.axisStyle.axisTitleFont
    * insight.Theme.axisStyle.axisLabelColor => insight.Theme.axisStyle.axisTitleColor
    * insight.Theme.seriesStyle.showPoints => insight.Theme.seriesStyle.shouldShowPoints
    * insight.Formatters => insight.formatters.



=== Version 1.1.1-Hotfix (23-Sep-2014) ===

* Fixed issue with chart highlighting in IE 11.



=== Version 1.1.1 (18-Sep-2014) ===

* Library changes
  * Sets default currency of currency formatter to USD.
  * Merges common functionality in ScatterSeries and BubbleSeries into a common PointSeries.
  * Deprecated “ScatterSeries.pointRadius”. Use “ScatterSeries.radiusFunction” instead.
  * ChartGroup.filterByGrouping: allows a given grouping to be filtered by a given value.
  * ChartGroup.clearFilters: allows all previously applied filters to be removed.

* Issues fixed
  * Horizontal axis tick labels were not anchored at the middle by default.
  * Chart titles were not within the chart SVG bounds.
  * Points were hidden when plotting multiple line series on a single chart.
  * Calculated charts margins were too large or too small.
  * Axis tick marks were obscured in bottom/right axis orientation.
  * There were too many ticks appearing on small charts.
  * Points on a scatter series were not transitioning when drawn.
  * Axis line width and color were not being displayed as they were set.



=== Version 1.1.0 (05-Sep-2014) ===

* Adds theming to charts and tables. By default this uses the LightTheme.